# photus-b

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: knowledge_anchors.json
docs/: DESIGN_PATTERNS_NLP.md  INSTRUCTIONAL.md  PROJECT_STRUCTURE.md  ROLES.MD
src/domain/application/pipelines/: semantic_routing.py
src/domain/application/strategies/embedding/: base.py  semantic_router.py  sentence_bert_embedder.py
src/domain/entities/: __init__.py  classification.py  route_result.py  score.py  sentiment.py  tag.py  text_input.py
src/domain/interfaces/: IClassifier.py  IPipeline.py  IScore.py  ISentiment.py  ITagger.py
src/infrastructure/: settings.py
src/infrastructure/adapters/: __init__.py  hugging_model_adapter.py  mistral_adapter.py  sentence_transformer_adapter.py  spacy_adapter.py
src/notebooks/: anchortest.ipynb
src/scripts/anchors/: evaluate_anchors.py  sbert_example_notebook.py  sbert_json.py
src/shared/: exceptions.py
src/shared/utils/: logger.py
