[project]
name = "photus-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mistralai>=1.12.4",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pydantic-settings>=2.13.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
    "transformers>=5.3.0",
]
